[FIX] Fix z-index levels

--- a/src/modules/upload/components/FileInput/styles.module.scss
+++ b/src/modules/upload/components/FileInput/styles.module.scss
@@ -26,6 +26,7 @@
   align-items: center;
   flex-direction: column;
   margin-bottom: 1rem;
+  z-index: 2;
 
   p {
     max-width: 250px;
